# bibata-studio

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  pyproject.toml
src/bibata_studio/: __init__.py  build.py  cli.py  presets.py  preview.py  render.py
src/bibata_studio/data/svg/: README.md
tests/: test_render.py  verify_windows_zip.py
